@@ -201,7 +201,8 @@ namespace eval ::xotcl::serializer {
     append cmd [list [$o info class] create [$o self]]
     # slots needs to be initialized when optimized, since
     # parametercmds are not serialized
-    if {![$o istype ::xotcl::Slot]} {append cmd " -noinit"}
+    #if {![$o istype ::xotcl::Slot]} {append cmd " -noinit"}
+    append cmd " -noinit"
     append cmd " \\\n"
     foreach i [$o info procs] {
       append cmd " " [my method-serialize $o $i ""] " \\\n"
@@ -209,6 +210,9 @@ namespace eval ::xotcl::serializer {
     foreach i [$o info forward] {
       set fwd [concat [list forward $i] [$o info forward -definition $i]]
       append cmd \t [my pcmd $fwd] " \\\n"
+    }
+    foreach i [$o info parametercmd] {
+      append cmd \t [my pcmd [list parametercmd $i]] " \\\n"
     }
     set vset {}
     set nrVars 0
@@ -245,6 +249,9 @@ namespace eval ::xotcl::serializer {
     foreach i [$o info instforward] {
       set fwd [concat [list instforward $i] [$o info instforward -definition $i]]
       append cmd \t [my pcmd $fwd] " \\\n"
+    }
+    foreach i [$o info instparametercmd] {
+      append cmd \t [my pcmd [list instparametercmd $i]] " \\\n"
     }
     foreach x {superclass instinvar} {
       set v [$o info $x]
